# Maison-Bot

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  example.env  pyproject.toml
src/: config.py
src/application/: errors.py
src/infra/: loguru.py
src/main/: __init__.py  di.py
src/presentation/: di.py  vk.py  web.py
