[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["mrmamongo <mrmamongo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
adaptix = "^3.0.0b7"
anyio = "^4.4.0"
aiohttp = "^3.9.5"
vkbottle = "^4.3.12"
dishka = "^1.2.0"
uvicorn = "^0.30.1"
dynaconf = "^3.2.5"
fastapi = "^0.111.0"
python-dotenv = "^1.0.1"
pre-commit = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
